# spring-boot-k8s

./: .gitignore  Dockerfile  PRESENTATION.md  README.md  README_python_aws.md  build.gradle.kts  build_and_push.sh  calls.http  calls.py  calls_minikube.py  helpers.sh  kubernetes_vol2.pptx  pyproject.toml  run.sh  settings.gradle.kts  ~$kubernetes_vol2.pptx
aws/: 1_create_vpc.sh  2_create_security_group.sh  3_create_eks_iam.sh  4_create_eks_cluster.sh  5_create_bastion.sh  6_create_bastions_in_public_subnets.sh  README.md  amazon-eks-vpc-only-public-subnets.yaml  aws_id_rsa  aws_id_rsa.pub  cleanup.sh  cleanup_bastion.sh  cleanup_security_groups.sh  create.sh  eks-cluster-role-trust-policy.json
aws/cleanup/: all.sh  cleanup_0_bastions.sh  cleanup_1_iam_roles.sh  cleanup_2_security_groups.sh  cleanup_3_eks_cluster.sh  cleanup_3_eks_cluster_and_vpc.sh  cleanup_3_eks_cluster_and_vpn.sh  cleanup_4_vpc.sh
aws/create/: 1_create_vpc.sh  3_create_eks_cluster.sh  3_create_eks_iam.sh  4_create_bastion.sh  4_create_eks_cluster.sh  5_create_bastion.sh  5_create_ingress_controller.sh  6_install_aws_load_balancer_controller.sh  7_setup_irsa.sh  8_install_keda.sh  all.sh  cluster.yaml
k8s/: README.md  cleanup.sh  create_deployment_&_service.sh  create_resources.sh  describe.sh  helpers.sh  resources.yaml
k8s_multiple_services/: README.md  create_resources.sh  helpers.sh  resources.yaml
py/: decode_jwt.py  find_private_subnets.py  find_vpc_id_by_name.py  helpers.py
static/: 03_01_pod_scheduling_and_binding.asc  03_02_pod_lifecycle.asc  03_03_container_lifecycle.asc
(+68 files in other folders)
